--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "flowbite",
         "Imageprofile",
         "Koenigsegg",
+        "Recomendation",
         "Sistrix",
         "swiper",
         "Terios"
