It's finished, it just has a small detail

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "flowbite",
         "Imageprofile",
         "Koenigsegg",
+        "MORENT",
         "Recomendation",
         "Sistrix",
         "swiper",
